<resources>
    <string name="app_name">mars-photos-app</string>
    <string name="mars_photos_app">Mars Photos App</string>
    <string name="curiosity">Curiosity</string>
    <string name="opportunity">Opportunity</string>
    <string name="spirit">Spirit</string>
    <string name="rover">Rover</string>
    <string name="launch_date">Launch Date</string>
    <string name="landing_date">Landing Date</string>
    <string name="status">Status</string>
    <string name="rover">Rover</string>
    <string name="earth_date">Earth Date</string>
    <string name="camera">Camera</string>
</resources>